# ComfyUI_moebius_inpainting

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  __init__.py  conversions.py  download.py  implementation_plan.md  nodes.py  pyproject.toml  requirements.txt  test_moebius.py
example_workflows/: flux2_klein_inpaint_prompt_example.json  flux2_klein_inpaint_reference_example.json  moebius_face_inpaint_example.json  moebius_inpaint_example.json  moebius_then_flux2_replace_example.json
moebius_src/: __init__.py  pipeline.py  removal_model.py  utils_infer.py
moebius_src/nets/: unet_lambda_prune_lite.py
moebius_src/nets/layers/: utils.py
moebius_src/nets/layers/lam/: __init__.py  vanilla_lambda.py
moebius_src/nets/layers/unet_blocks/: mix_transformer.py
